--- a/package.json
+++ b/package.json
@@ -9,17 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^8.7.2",
     "next": "14.2.15",
-    "next-auth": "5.0.0-beta.23",
+    "next-auth": "5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "eslint-config-next": "14.2.15"
   }
 }
